objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Observations__c</fullName>
        <label>Inspection Observations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Machine_Serial_Number__c</fullName>
        <label>Machine Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grinding Machine</fullName>
                </value>
                <value>
                    <fullName>Honing Machine</fullName>
                </value>
                <value>
                    <fullName>Refurbishing</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping City</label>
        <type>Text</type>
    </fields>
</CustomObject>